qisun-poc/ResourceManager/AzureRM.Backup/v1.0.12/Unregister-AzureRmBackupContainer.md
---
external help file: Microsoft.Azure.Commands.AzureBackup.dll-Help.xml
online version: .\Get-AzureRmBackupContainer.md
schema: 2.0.0
ms.assetid: F5F98D01-86C1-4BDC-A72F-D9C8EFAA6414
updated_at: 10/19/2016 3:33 AM
ms.date: 10/19/2016
content_git_url: https://github.com/SummerSun/azure-docs-powershell-int/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Backup/v1.0.12/Unregister-AzureRmBackupContainer.md
gitcommit: https://github.com/SummerSun/azure-docs-powershell-int/blob/c0d1e448da01261236e9ece01ca5c2a98effbf31/azureps-cmdlets-docs/ResourceManager/AzureRM.Backup/v1.0.12/Unregister-AzureRmBackupContainer.md
ms.topic: reference
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, cmdlet
manager: visual-studio-china
---

# Unregister-AzureRmBackupContainer

## SYNOPSIS
Unregisters a container from a Backup vault.

## SYNTAX

```
Unregister-AzureRmBackupContainer [-Force] [-Container] <AzureRMBackupContainer> [-WhatIf] [-Confirm]
 [<CommonParameters>]
```

## DESCRIPTION
The **Unregister-AzureRmBackupContainer** cmdlet unregisters the Windows Server or azure_2 virtual machine from an azure_2 Backup vault.
This cmdlet removes references to a container from the Backup vault.
Before you can unregister a container, you must delete any protected data associated with that container.

## EXAMPLES

### Example 1: Unregister a Windows Server
```
PS C:\>$Vault = Get-AzureRmBackupVault -Name "Vault03"
PS C:\> $Container = Get-AzureRmBackupContainer -Vault $Vault -Type Windows -Name "server01.contoso.com"
PS C:\> Unregister-AzureRmBackupContainer -Container $Container[0]
Unregister Server
This operation will delete all data in the backup vault that is associated with the server. Are you sure you want to unregister the server? 
[] Yes  [] No  [?] Help (default is "No"): Yes
```

The first command gets the vault named Vault03 by using the Get-AzureRmBackupVault cmdlet.
The command stores that object in the $Vault variable.

The second command gets a container that has the specified name in the vault in $Vault by using the Get-AzureRmBackupContainer cmdlet.
The command stores that object in the $Container variable.

The final command unregisters the specified Windows Server from the azure_2 Backup vault.

### Example 2: Unregister a Windows Server without confirmation
```
PS C:\>Unregister-AzureRmBackupContainer -Container $Container[0] -Force
```

This command unregisters the specified Windows Server from the azure_2 Backup vault, just as in the first example.
This command specifies the *Force* parameter.
Therefore, the command does not prompt you for confirmation.

## PARAMETERS

### -Container
Specifies the Windows Server or azure_2 virtual machine that this cmdlet unregisters.
To obtain an **AzureRmBackupContainer**, use the Get-AzureRmBackupContainer cmdlet.

```yaml
Type: AzureRMBackupContainer
Parameter Sets: (All)
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -Force
ps_force This parameter is relevant only for **AzureBackupContainer** objects of type Windows.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: 

Required: False
Position: 2
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm
psdx_confirmdesc

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf
psdx_whatifdesc

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### AzureBackupContainer

## OUTPUTS

### AzureBackupJob
This cmdlet returns $Null if the container type is Windows Server.

## NOTES
* None

## RELATED LINKS

[Get-AzureRmBackupContainer](.\Get-AzureRmBackupContainer.md)

[Get-AzureRmBackupVault](.\Get-AzureRmBackupVault.md)

[Register-AzureRmBackupContainer](.\Register-AzureRmBackupContainer.md)


